# ffxivchan

./: .gitignore  .gitmodules  README.md  context.txt  ffxiv_dx11.CT  xivchan.sln
BraveNewMod/: BraveNewMod.vcxproj  BraveNewMod.vcxproj.filters
BraveNewMod/common/: context.h  dynamic_pointers.h  hooks.h  memory.h  objects.h  offsets.h  system.h  types.h  vmt.h
BraveNewMod/loader/: Console.cpp  DXGI_DLL.cpp  LoaderEntry.cpp  SwapChain.cpp
BraveNewMod/overlay/: MenuBar.cpp  im_engine.h  im_main.cpp  overlay.h
BraveNewMod/source/: Actor.cpp  IM_Engine.cpp  IconSwaps.cpp  memory.cpp
BraveNewMod/types/: Actor.h  JobGauge.h  Status.h  enums.h  objects.h
notdx/: Actor.h  Assembly.cpp  ChatLog.h  Console.cpp  Context.cpp  Hooks.cpp  IconSys.cpp  Interface.cpp  Logging.cpp  MainMenu.cpp  Managers.h  Market.cpp  Market.h  Memory.cpp  Misc.cpp  Network.cpp  Objects.cpp  Quest.h  RaptureSys.cpp  Scripts.h  Window.h  embed.cpp  gui.h  hooks.h  log.h  main.cpp  memory.h  notdx.vcxproj  notdx.vcxproj.filters  sdk.h  system.h  timer.h  unit.h  utils.cpp
notdx/ActionSystem/: ActionManager.h  ForceQueue.cpp  IconSwaps.cpp
notdx/Headers/: Actor.h  Managers.h  types.h
notdx/LuaVM/: Console.cpp  VM.cpp
notdx/UserSystem/: UserManager.h
notdx/ZoomSystem/: UpdateCamera.cpp  ZoomManager.h
notdx/_Main/: user.h  vmt.h
notdx/_Resources/: project.rc  resource.h
notdx/lua/: lapi.cpp
notdx/rapture/: ForceQueue.cpp  IconSwaps.cpp  main.h
rsdx/: Cargo.toml  bored.py
rsdx/src/: lib.rs  macros.rs  start.rs
scripts/: _boot.lua  brd_te.py  patch_day.py  patch_v2.py
(+27 files in other folders)
