[package]
name = "rsdx"
version = "0.1.0"
authors = ["slut"]

[lib]
name = "dxgi"
crate-type = ["dylib"]

[dependencies]
winapi = {version = "0.3.8", features = ["minwindef", "winuser", "libloaderapi", "dxgi", "d3d11"]}
lazy_static = "1.4.0"
kernel32-sys = "0.2.2"
user32-sys = "0.2.0"
detour = "0.7.1"
